Use Java 16 features and clean up